[gd_scene load_steps=4 format=3 uid="uid://buyai4q5s2awh"]

[ext_resource type="Script" path="res://Scripts/UI/player_info_box.gd" id="1_w1vmx"]
[ext_resource type="Texture2D" uid="uid://bueykcynbkji8" path="res://Assets/Art/Characters/Icons/medieval_1.png" id="2_ir6sh"]
[ext_resource type="PackedScene" uid="uid://8858ltyflkui" path="res://Scenes/UI/Menus/health_bar.tscn" id="3_y2tdd"]

[node name="Info" type="Control" node_paths=PackedStringArray("player_name", "player_icon")]
custom_minimum_size = Vector2(300, 150)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_w1vmx")
player_name = NodePath("Name Box/Name")
player_icon = NodePath("Icon")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 300.0
offset_bottom = 100.0
size_flags_horizontal = 0
color = Color(0.0862745, 0.196078, 0.282353, 1)

[node name="TurnIndicator" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 300.0
offset_bottom = 100.0
color = Color(0, 0.270588, 0.380392, 1)

[node name="BattleIndicator" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 300.0
offset_bottom = 100.0
color = Color(0.501961, 0, 0, 1)

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 210.0
offset_bottom = 220.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_ir6sh")
expand_mode = 1
stretch_mode = 4

[node name="HealthBar" parent="." instance=ExtResource("3_y2tdd")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.667
offset_left = 85.0
offset_top = 45.0
offset_right = -14.0
offset_bottom = -5.05001

[node name="Name Box" type="Control" parent="."]
anchors_preset = 0
offset_left = 85.0
offset_right = 285.0
offset_bottom = 45.0

[node name="Name" type="RichTextLabel" parent="Name Box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_right = 104.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Whatever Name Fits within this[/center]"
fit_content = true
scroll_active = false
